package ua.birthdays.app.models;

public class AboutFriend {
    private final String nameFriend;

    public AboutFriend(String nameFriend) {
        this.nameFriend = nameFriend;
    }

    public String getNameFriend() {
        return nameFriend;
    }
}
